<resources>
    <string name="app_name">FrangrancePerfume</string>
    <string name="title">title</string>
    <string name="name">name</string>
    <string name="Cashmere_Mist">cashmeremist</string>
    <string name="by_Donna_Karan">bydonna</string>
    <string name="Women">women</string>
    <string name="Sizes_Available">sizes</string>
    <string name="sizes_available">sizes</string>
</resources>
