<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="120dp"
                android:layout_height="90dp"
                android:padding="16dp"
                android:contentDescription="@string/app_name"/>

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@id/imageView"
                android:text="@string/Cashmere_Mist"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textStyle="bold"
                android:textColor="#000000"/>

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewTitle"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@id/imageView"
                android:text="@string/by_Donna_Karan"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

            <TextView
                android:id="@+id/textViewType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@id/imageView"
                android:layout_below="@id/textViewName"
                android:text="@string/Women"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

            <TextView
                android:id="@+id/textViewSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@id/imageView"
                android:layout_below="@id/textViewType"
                android:text="@string/sizes_available"
                android:textStyle="bold"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>


        </RelativeLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>